<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp"
    tools:context=".ui.translation.presentation.TranslationFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/noteMessageContainer"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_below="@+id/subTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/translation_fragment_searched_word_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:inputType="text"
            android:maxLines="1"
            android:gravity="top|start"
            android:hint="@string/translation_fragment_searched_word_hint_text"
            android:background="@drawable/rounded_shape"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/translation_fragment_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_shape"
        android:text="@string/translation_fragment_translate_word_button"/>

    <TextView
        android:id="@+id/translation_fragment_found_word_text"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:padding="17dp"
        android:textSize="16sp"
        android:autofillHints="Login"
        android:hint="@string/translation_fragment_translated_word_hint_text"
        android:background="@drawable/rounded_shape"/>
</LinearLayout>